update hero alt image

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
     <div class="row">
         <div class="col-12 col-s-3">
-            <div><img src="img/pexels-cottonbro-6208699.jpg" alt=""></div>
+            <div><img src="img/pexels-cottonbro-6208699.jpg" alt="hero 1 image"></div>
         </div>
     </div>
     <div class="row">
