update css untuk header

--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
 </head>
 
 <body>
-    <header>
-        <img src="img/web-logo-color.png" alt="Logo SMK Sains Indonesia" width="80px" class="logo">
+    <header class="header">
+        <img src="img/web-logo-color.png" alt="Logo SMK Sains Indonesia" width="40px" class="logo">
         <h1 class="title">SMK Sains Indonesia</h1>
-        <nav>
-            <a href="#">Home</a> / 
-            <a href="#">Akademik</a> / 
-            <a href="#">Galeri</a> / 
-            <a href="#">Kontak</a>
+        <nav class="nav">
+            <ul class="menu">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Akademik</a></li>
+                <li><a href="#">Galeri</a></li>
+                <li><a href="#">Kontak</a></li>
+            </ul>
         </nav>
     </header>
     <div class="row">
