--- a/index.html
+++ b/index.html
@@ -5,31 +5,56 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SMK Sains Indonesia</title>
+    <title>SMK Sains Pertiwi</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/footer.css">
 </head>
 
 <body>
-    <header class="header">
-        <img src="img/web-logo-color.png" alt="Logo SMK Sains Indonesia" width="40px" class="logo">
-        <h1 class="title">SMK Sains Indonesia</h1>
-        <nav class="nav">
-            <ul class="menu">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Akademik</a></li>
-                <li><a href="#">Galeri</a></li>
-                <li><a href="#">Kontak</a></li>
-            </ul>
-        </nav>
-    </header>
-    <div class="row">
+    <div class="header-container">
+        <header class="header">
+            <img src="img/web-logo-color.png" alt="Logo SMK Sains Pertiwi" width="40px" class="logo">
+            <h1 class="title">SMK Sains Pertiwi</h1>
+            <!-- Hamburger icon -->
+            <input class="side-menu" type="checkbox" id="side-menu" />
+            <label class="hamb" for="side-menu"><span class="hamb-line"></span></label>
+
+            <nav class="nav">
+                <ul class="menu">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Akademik</a></li>
+                    <li><a href="#">Galeri</a></li>
+                    <li><a href="#">Kontak</a></li>
+                </ul>
+            </nav>
+        </header>
+    </div>
+    <div class="row hero">
         <div class="col-12 col-s-3">
-            <div><img src="img/pexels-cottonbro-6208699.jpg" alt="hero 1 image"></div>
+            <div>
+                <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores quam delectus sed consequatur
+                    exercitationem accusantium nisi aperiam qui velit! Odio iste quos quis atque, quibusdam ut dolorem
+                    animi tempora consequuntur! </h1>
+            </div>
         </div>
     </div>
     <div class="row">
-        <div class="col-12 col-s-3">footer</div>
+        <div class="col-12 col-s-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim tempora minus ut,
+            dolor provident sapiente officiis repudiandae ad iusto a! Iure voluptates eos ad sint assumenda, commodi
+            molestiae quibusdam illum!</div>
+    </div>
+    <div class="row footer">
+        <div class="col-8 col-s-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor ad esse magni,
+            molestias totam excepturi error libero sequi blanditiis at velit asperiores labore aliquam reiciendis
+            enim
+            nobis, rem ratione suscipit.
+        </div>
+        <div class="col-4 col-s-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor ad esse magni,
+            molestias totam excepturi error libero sequi blanditiis at velit asperiores labore aliquam reiciendis
+            enim
+            nobis, rem ratione suscipit.
+        </div>
     </div>
 </body>
 
