--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
             <div>
                 <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores quam delectus sed consequatur
                     exercitationem accusantium nisi aperiam qui velit! Odio iste quos quis atque, quibusdam ut dolorem
-                    animi tempora consequuntur! </h1>
+                    animi tempora consequuntur!
+                </h1>
+                <button class="button">Daftar</button>
             </div>
         </div>
     </div>
@@ -45,15 +47,29 @@
             molestiae quibusdam illum!</div>
     </div>
     <div class="row footer">
-        <div class="col-8 col-s-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor ad esse magni,
-            molestias totam excepturi error libero sequi blanditiis at velit asperiores labore aliquam reiciendis
-            enim
-            nobis, rem ratione suscipit.
+        <div class="col-6 col-s-3">
+            <img src="img/web-logo-white.png" alt="Logo SMK Sains Pertiwi" width="60px">
+            <h1>SMK Sains Pertiwi</h1>
+            <p>Jl. Raya Pertiwi No.1, Pertiwi, Kec. Pertiwi, Jakarta Selatan, DKI Jakarta</p>
+            <p>Telp. (021) 788888</p>
+            <p>Email: <a href="mailto:inbox@smksainspertiwi.ac.id">inbox@smksainspertiwi.ac.id</a></p>
         </div>
-        <div class="col-4 col-s-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor ad esse magni,
-            molestias totam excepturi error libero sequi blanditiis at velit asperiores labore aliquam reiciendis
-            enim
-            nobis, rem ratione suscipit.
+        <div class="col-3 col-s-3">
+            <h2>Navigasi</h2>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Akademik</a></li>
+                <li><a href="#">Galeri</a></li>
+                <li><a href="#">Kontak</a></li>
+            </ul>
+        </div>
+        <div class="col-3 col-s-3">
+            <h2>Social Media</h2>
+            <ul>
+                <li><a href="#">Facebook</a></li>
+                <li><a href="#">Instagram</a></li>
+                <li><a href="#">Twitter</a></li>
+            </ul>
         </div>
     </div>
 </body>
