--- a/index.html
+++ b/index.html
@@ -22,10 +22,34 @@
 
             <nav class="nav">
                 <ul class="menu">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Akademik</a></li>
-                    <li><a href="#">Galeri</a></li>
-                    <li><a href="#">Kontak</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropbtn">Profil</a>
+                        <div class="dropdown-content">
+                            <a href="#">Sejarah</a>
+                            <a href="#">Visi Misi</a>
+                            <a href="#">Pengajar</a>
+                            <a href="#">Prestasi</a>
+                        </div>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropbtn">Akademik</a>
+                        <div class="dropdown-content">
+                            <a href="#">Peraturan</a>
+                            <a href="#">Kalender Akademik</a>
+                            <a href="#">Kesiswaan</a>
+                        </div>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropbtn">Program Keahlian</a>
+                        <div class="dropdown-content">
+                            <a href="#">Sistem Informasi Jaringan Aplikasi</a>
+                            <a href="#">Rekayasa Perangkat Lunak</a>
+                            <a href="#">Teknik Elektronika Industri</a>
+                            <a href="#">Teknik Otomasi Industri</a>
+                        </div>
+                    </li>
+                    <li><a href="#" class="dropbtn">Galeri</a></li>
+                    <li><a href="#" class="dropbtn">Kontak</a></li>
                 </ul>
             </nav>
         </header>
