--- a/index.html
+++ b/index.html
@@ -66,9 +66,24 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-12 col-s-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim tempora minus ut,
-            dolor provident sapiente officiis repudiandae ad iusto a! Iure voluptates eos ad sint assumenda, commodi
-            molestiae quibusdam illum!</div>
+        <div class="col-6 col-s-3">
+            <h1>Kegiatan</h1>
+            <ul>
+                <li><b>02 Januari 2022</b> : Awal Semester Genap</li>
+                <li><b>02 Januari 2022</b> : Awal Semester Genap</li>
+                <li><b>02 Januari 2022</b> : Awal Semester Genap</li>
+                <li><b>02 Januari 2022</b> : Awal Semester Genap</li>
+            </ul>
+        </div>
+        <div class="col-6 col-s-3">
+            <h1>Berita</h1>
+            <ul>
+                <li><b>02 Januari 2022</b> : Awal Semester Genap</li>
+                <li><b>02 Januari 2022</b> : Awal Semester Genap</li>
+                <li><b>02 Januari 2022</b> : Awal Semester Genap</li>
+                <li><b>02 Januari 2022</b> : Awal Semester Genap</li>
+            </ul>
+        </div>
     </div>
     <div class="row footer">
         <div class="col-6 col-s-3">
