--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropbtn">Akademik</a>
                         <div class="dropdown-content">
+                            <a href="#">PPDB</a>
                             <a href="#">Peraturan</a>
                             <a href="#">Kalender Akademik</a>
                             <a href="#">Kesiswaan</a>
@@ -50,7 +51,7 @@
                     </li>
                     <li class="dropdown"><a href="#" class="dropbtn">Galeri</a></li>
                     <li class="dropdown"><a href="#" class="dropbtn">Kontak</a></li>
-                    <li><button class="button dropbtn">Informasi Pendaftaran</button></li>
+                    <li><button class="button dropbtn">PPDB</button></li>
                 </ul>
             </nav>
         </header>
@@ -62,7 +63,7 @@
                     adipisicing elit. Culpa et iusto maiores similique alias, laborum nesciunt ex nam? Iusto modi
                     nostrum nulla amet error laudantium voluptate culpa perferendis eos fugiat.
                 </h1>
-                <button class="button">Lihat Informasi</button>
+                <button class="button">Lihat Informasi PPDB</button>
             </div>
         </div>
     </div>
