--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                 <li><b>15 Januari 2022</b> : Kegiatan 2</li>
                 <li><b>16 Februari 2022</b> : Kegiatan 3</li>
                 <li><b>05 Maret 2022</b> : Kegiatan 4</li>
+                <li><a href="#">Kalender Akademik &#8594;</a></li>
             </ul>
         </div>
         <div class="col-6 col-s-3">
@@ -149,25 +150,26 @@
         <div class="col-6 col-s-3">
             <img src="img/web-logo-white.png" alt="Logo SMK Sains Pertiwi" width="60px">
             <h1>SMK Sains Pertiwi</h1>
-            <p>Jl. Raya Pertiwi No.1, Pertiwi, Kec. Pertiwi, Jakarta Selatan, DKI Jakarta</p>
+            <p>Jl. Raya Pertiwi No.1, Pertiwi, Kec. Pertiwi,<br>Jakarta Selatan, DKI Jakarta</p>
             <p>Telp. (021) 788888</p>
-            <p>Email: <a href="mailto:inbox@smksainspertiwi.ac.id">inbox@smksainspertiwi.ac.id</a></p>
+            <p>Email: <a href="mailto:inbox@smksainspertiwi.ac.id" class="footerlink">inbox@smksainspertiwi.ac.id</a>
+            </p>
         </div>
         <div class="col-3 col-s-3">
             <h2>Navigasi</h2>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Akademik</a></li>
-                <li><a href="#">Galeri</a></li>
-                <li><a href="#">Kontak</a></li>
+                <li><a href="#" class="footerlink">Home</a></li>
+                <li><a href="#" class="footerlink">Akademik</a></li>
+                <li><a href="#" class="footerlink">Galeri</a></li>
+                <li><a href="#" class="footerlink">Kontak</a></li>
             </ul>
         </div>
         <div class="col-3 col-s-3">
             <h2>Social Media</h2>
             <ul>
-                <li><a href="#">Facebook</a></li>
-                <li><a href="#">Instagram</a></li>
-                <li><a href="#">Twitter</a></li>
+                <li><a href="#" class="footerlink">Facebook</a></li>
+                <li><a href="#" class="footerlink">Instagram</a></li>
+                <li><a href="#" class="footerlink">Twitter</a></li>
             </ul>
         </div>
     </div>
