--- a/index.html
+++ b/index.html
@@ -27,29 +27,58 @@
                         <div class="dropdown-content">
                             <a href="#">Sejarah</a>
                             <a href="#">Visi Misi</a>
-                            <a href="#">Pendidik</a>
-                            <a href="#">Prestasi</a>
+                            <a href="#">Tugas & Fungsi</a>
+                            <a href="#">Profil Pimpinan</a>
+                            <a href="#">Peta Sekolah</a>
                         </div>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropbtn">Akademik</a>
+                        <a href="#" class="dropbtn">Program Sekolah</a>
                         <div class="dropdown-content">
-                            <a href="#">PPDB</a>
-                            <a href="#">Peraturan</a>
-                            <a href="#">Kalender Akademik</a>
-                            <a href="#">Kesiswaan</a>
+                            <a href="#">Program Kerja</a>
+                            <a href="#">Hubungan Industri</a>
+                            <a href="#">Program Inovasi</a>
+                            <a href="#">Program Bussiness Center</a>
                         </div>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropbtn">Program Keahlian</a>
                         <div class="dropdown-content">
-                            <a href="#">Sistem Informasi Jaringan Aplikasi</a>
                             <a href="#">Rekayasa Perangkat Lunak</a>
                             <a href="#">Teknik Elektronika Industri</a>
+                            <a href="#">Teknik Mesin</a>
+                            <a href="#">Sistem Informasi</a>
                             <a href="#">Teknik Otomasi Industri</a>
+                            <a href="#">Teknik Pendingin & Tata Udara</a>
+                            <a href="#">Teknik Mekatronika</a>
+                            <a href="#">Produksi Film & Program Televisi</a>
                         </div>
                     </li>
-                    <li class="dropdown"><a href="#" class="dropbtn">Galeri</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropbtn">Kegiatan Sekolah</a>
+                        <div class="dropdown-content">
+                            <a href="#">Agenda Kegiatan</a>
+                            <a href="#">Bursa Kerja</a>
+                            <a href="#">PPDB</a>
+                            <a href="#">Sistem Informasi</a>
+                            <a href="#">Ekstrakulikuler</a>
+                            <a href="#">Laporan Kegiatan Sekolah</a>
+                        </div>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropbtn">Berita</a>
+                        <div class="dropdown-content">
+                            <a href="#">Berita Sekolah</a>
+                            <a href="#">Berita Pendidikan</a>
+                        </div>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropbtn">Galeri</a>
+                        <div class="dropdown-content">
+                            <a href="#">Galeri Foto</a>
+                            <a href="#">Galeri Video</a>
+                        </div>
+                    </li>
                     <li class="dropdown"><a href="#" class="dropbtn">Kontak</a></li>
                     <li><button class="button dropbtn">PPDB</button></li>
                 </ul>
