--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SMK Sains Pertiwi</title>
+    <title>SMK Sains Pertiwi - Home</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/footer.css">
@@ -57,7 +57,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropbtn">Kegiatan Sekolah</a>
                         <div class="dropdown-content">
-                            <a href="#">Agenda Kegiatan</a>
+                            <a href="#">Kalender Akademik</a>
                             <a href="#">Bursa Kerja</a>
                             <a href="#">PPDB</a>
                             <a href="#">Sistem Informasi</a>
@@ -88,51 +88,73 @@
     <div class="row hero">
         <div class="col-12 col-s-3">
             <div>
-                <h1>Penerimaan Siswa Baru Tahun Ajaran 2022/2023 telah dibuka. Lorem ipsum dolor sit amet consectetur
-                    adipisicing elit. Culpa et iusto maiores similique alias, laborum nesciunt ex nam? Iusto modi
-                    nostrum nulla amet error laudantium voluptate culpa perferendis eos fugiat.
-                </h1>
+                <h1>Penerimaan Siswa Baru Tahun Ajaran 2022/2023 segera dibuka.</h1>
+                <p>
+                    Daftar di 8 pilihan program keahlian dengan kurikulum nasional.
+                    Dapatkan kesempatan untuk mengikuti program keahlian yang sesuai dengan karakteristikmu.
+                </p>
                 <button class="button">Lihat Informasi PPDB</button>
             </div>
         </div>
     </div>
     <div class="row section-light">
         <div class="col-12 col-s-3">
-            <h1>Selamat datang di SMK Sains Pertiwi</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam illo molestias, nam expedita asperiores
-                nulla excepturi illum architecto veniam, minima nobis temporibus suscipit sint impedit harum ipsum
-                corporis omnis aut?</p>
+            <h2>Selamat datang di SMK Sains Pertiwi</h2>
+            <p>SMK unggulan dengan Program Pendidikan Kejuruan yang menghasilkan lulusan bersertifikat internasional.
+            </p>
         </div>
     </div>
     <div class="row section-light">
         <div class="col-6 col-s-3">
-            <h1>Kegiatan</h1>
-            <ul>
-                <li><b>02 Januari 2022</b> : Kegiatan 1</li>
-                <li><b>15 Januari 2022</b> : Kegiatan 2</li>
-                <li><b>16 Februari 2022</b> : Kegiatan 3</li>
-                <li><b>05 Maret 2022</b> : Kegiatan 4</li>
+            <h2 style="text-align:left">Kegiatan</h2>
+            <ul style="text-align:left">
+                <li><b>1 Januari 2022</b> : Libur Umum (Tahun Baru Masehi 2022)</li>
+                <li><b>3 Januari 2022</b> : Hari Pertama Sekolah (HP) dan Awal Semester Genap</li>
+                <li><b>8 Januari - 8 Februari 2022</b> : Pengisian PDSS SNMPTN</li>
+                <li><b>1 Februari 2022</b> : Libur Umum (Tahun Baru Imlek 2573)</li>
+                <li><b>14-28 Februari 2022</b> : Pendaftaran SNMPTN</li>
+                <li><b>14 Februari - 17 Maret 2022</b> : Pembuatan Akun LTMPT</li>
                 <li><a href="#">Kalender Akademik &#8594;</a></li>
             </ul>
         </div>
         <div class="col-6 col-s-3">
-            <h1>Berita</h1>
-            <ul>
-                <li>Judul Berita 1</li>
-                <li>Judul Berita 2</li>
-                <li>Judul Berita 3</li>
-                <li>Judul Berita 4</li>
-                <li>Judul Berita 5</li>
-                <li>Judul Berita 6</li>
+            <h2 style="text-align:left">Berita</h2>
+            <ul style="text-align:left">
+                <li>Ayo Dukung Siswa Kita di Program Microsoft Young Developer</li>
+                <li>Pameran Produk Kreatif Kewirausahaan dan Start Up Bisnis Siswa SMK Sains Pertiwi</li>
+                <li>Guru SMK Sains Pertiwi Raih Terbaik 2 Guru Dedikasi dan Inovasi SMK tingkat Nasional</li>
+                <li>Workshop Produk Kreatif Kewirausahaan menuju Sekolah Pencetak Wirausaha</li>
+                <li>Kunjungan SMKN 1 Sorong Papua</li>
+                <li>“CAREER DAY” SMK Sains Pertiwi</li>
             </ul>
         </div>
     </div>
     <div class="row section-dark">
-        <div class="col-12 col-s-3">
-            <h1>Visi dan Misi</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam illo molestias, nam expedita asperiores
-                nulla excepturi illum architecto veniam, minima nobis temporibus suscipit sint impedit harum ipsum
-                corporis omnis aut?</p>
+        <div class="col-4 col-s-3">
+            <div class="div-wrapper">
+                <img src="img/happy-braces-asian-student-girl-school-uniform-arm-crossed-isolated-pastel-background.png"/>
+            </div>
+        </div>
+        <div class="col-4 col-s-3">
+            <h2 style="text-align:left">Visi</h2>
+            <h3 style="text-align:left">Terwujudnya sekolah dengan lulusan yang unggul dan berakhlaq mulia, berbudaya
+                kerja, berjiwa technopreuneurship serta berwawasan global sesuai tuntutan industri dan masyarakat.</h3>
+        </div>
+        <div class="col-4 col-s-3">
+            <h2 style="text-align:left">Misi</h2>
+            <ol style="text-align:left">
+                <li>Menghasilkan peserta didik yang unggul, beriman dan bertakwa kepada Tuhan Yang Maha Esa, berakhlak
+                    mulia, berkebinekaan, mandiri, bergotong royong, bernalar kritis, kreatif. </li>
+                <li>Mewujudkan lingkungan yang berbudaya kerja.</li>
+                <li>Menghasilkan peserta didik yang terampil serta berjiwa wirausaha sesuai dengan bidang ilmu yang
+                    dipelajarinya (Technopreuneurship).</li>
+                <li>Menumbuh kembangkan literasi, penguasaan perkembangan teknologi, informasi, memahami keberagaman
+                    sosial budaya dan kultur.</li>
+                <li>Menyiapkan peserta didik menjadi tenaga kerja yang handal serta mampu bersaing di dunia kerja.
+                </li>
+                <li>Meningkatkan pelayanan pendidikan dan pengelolaan sekolah melalui optimalisasi penjaminan mutu
+                    pendidikan.</li>
+            </ol>
         </div>
     </div>
     <div class="row section-light">
