--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js"></script>
 </head>
 
 <body>
     <div class="header-container">
         <header class="header">
-            <img src="img/web-logo-color.png" alt="Logo SMK Sains Pertiwi" width="40px" class="logo">
+            <img src="img/web-logo-white.png" alt="Logo SMK Sains Pertiwi" width="40px" class="logo">
             <h1 class="title">SMK Sains Pertiwi</h1>
             <!-- Hamburger icon -->
             <input class="side-menu" type="checkbox" id="side-menu" />
@@ -80,7 +82,7 @@
                         </div>
                     </li>
                     <li class="dropdown"><a href="#" class="dropbtn">Kontak</a></li>
-                    <li><button class="button dropbtn">PPDB</button></li>
+                    <li><button class="button button-header dropbtn">PPDB</button></li>
                 </ul>
             </nav>
         </header>
@@ -97,7 +99,7 @@
             </div>
         </div>
     </div>
-    <div class="row section-light">
+    <div class="row section-mid">
         <div class="col-12 col-s-3">
             <h2>Selamat datang di SMK Sains Pertiwi</h2>
             <p>SMK unggulan dengan Program Pendidikan Kejuruan yang menghasilkan lulusan bersertifikat internasional.
@@ -106,7 +108,7 @@
     </div>
     <div class="row section-light">
         <div class="col-6 col-s-3">
-            <h2 style="text-align:left">Kegiatan</h2>
+            <h2 style="text-align:left"><i class="fa-solid fa-calendar-days"></i> Kegiatan</h2>
             <ul style="text-align:left">
                 <li><b>1 Januari 2022</b> : Libur Umum (Tahun Baru Masehi 2022)</li>
                 <li><b>3 Januari 2022</b> : Hari Pertama Sekolah (HP) dan Awal Semester Genap</li>
@@ -114,11 +116,11 @@
                 <li><b>1 Februari 2022</b> : Libur Umum (Tahun Baru Imlek 2573)</li>
                 <li><b>14-28 Februari 2022</b> : Pendaftaran SNMPTN</li>
                 <li><b>14 Februari - 17 Maret 2022</b> : Pembuatan Akun LTMPT</li>
-                <li><a href="#">Kalender Akademik &#8594;</a></li>
+                <li><a href="#">Kalender Akademik <i class="fa-solid fa-arrow-right"></i></a></li>
             </ul>
         </div>
         <div class="col-6 col-s-3">
-            <h2 style="text-align:left">Berita</h2>
+            <h2 style="text-align:left"><i class="fa-solid fa-newspaper"></i> Berita</h2>
             <ul style="text-align:left">
                 <li>Ayo Dukung Siswa Kita di Program Microsoft Young Developer</li>
                 <li>Pameran Produk Kreatif Kewirausahaan dan Start Up Bisnis Siswa SMK Sains Pertiwi</li>
@@ -129,18 +131,18 @@
             </ul>
         </div>
     </div>
-    <div class="row section-dark">
+    <div class="row section-light">
         <div class="col-4 col-s-3">
             <div class="div-wrapper">
                 <img src="img/happy-braces-asian-student-girl-school-uniform-arm-crossed-isolated-pastel-background.png"/>
             </div>
         </div>
-        <div class="col-4 col-s-3">
+        <div class="col-s-3 block-dark">
             <h2 style="text-align:left">Visi</h2>
-            <h3 style="text-align:left">Terwujudnya sekolah dengan lulusan yang unggul dan berakhlaq mulia, berbudaya
-                kerja, berjiwa technopreuneurship serta berwawasan global sesuai tuntutan industri dan masyarakat.</h3>
+            <p style="text-align:left">Terwujudnya sekolah dengan lulusan yang unggul dan berakhlaq mulia, berbudaya
+                kerja, berjiwa technopreuneurship serta berwawasan global sesuai tuntutan industri dan masyarakat.</p>
         </div>
-        <div class="col-4 col-s-3">
+        <div class="col-4 col-s-3 block-dark">
             <h2 style="text-align:left">Misi</h2>
             <ol style="text-align:left">
                 <li>Menghasilkan peserta didik yang unggul, beriman dan bertakwa kepada Tuhan Yang Maha Esa, berakhlak
@@ -201,7 +203,7 @@
         <div class="col-6 col-s-3">
             <img src="img/web-logo-white.png" alt="Logo SMK Sains Pertiwi" width="60px">
             <h1>SMK Sains Pertiwi</h1>
-            <p>Jl. Raya Pertiwi No.1, Pertiwi, Kec. Pertiwi,<br>Jakarta Selatan, DKI Jakarta</p>
+            <p>Jl. Raya Pertiwi No.1, Cawang, Kec. Kramat Jati,<br>Jakarta Timur, DKI Jakarta</p>
             <p>Telp. (021) 788888</p>
             <p>Email: <a href="mailto:inbox@smksainspertiwi.ac.id" class="footerlink">inbox@smksainspertiwi.ac.id</a>
             </p>
@@ -210,17 +212,20 @@
             <h2>Navigasi</h2>
             <ul>
                 <li><a href="#" class="footerlink">Home</a></li>
-                <li><a href="#" class="footerlink">Akademik</a></li>
+                <li><a href="#" class="footerlink">Profil</a></li>
+                <li><a href="#" class="footerlink">Program Sekolah</a></li>
+                <li><a href="#" class="footerlink">Program Keahlian</a></li>
+                <li><a href="#" class="footerlink">Kegiatan Sekolah</a></li>
+                <li><a href="#" class="footerlink">Berita</a></li>
                 <li><a href="#" class="footerlink">Galeri</a></li>
-                <li><a href="#" class="footerlink">Kontak</a></li>
             </ul>
         </div>
         <div class="col-3 col-s-3">
             <h2>Social Media</h2>
             <ul>
-                <li><a href="#" class="footerlink">Facebook</a></li>
-                <li><a href="#" class="footerlink">Instagram</a></li>
-                <li><a href="#" class="footerlink">Twitter</a></li>
+                <li><a href="#" class="footerlink"><i class="fa-brands fa-facebook"></i> SMK Sains Pertiwi</a></li>
+                <li><a href="#" class="footerlink"><i class="fa-brands fa-instagram"></i> @sains_pertiwi</a></li>
+                <li><a href="#" class="footerlink"><i class="fa-brands fa-twitter"></i> @sains_pertiwi</a></li>
             </ul>
         </div>
     </div>
