--- a/index.html
+++ b/index.html
@@ -160,12 +160,20 @@
             </ol>
         </div>
     </div>
-    <div class="row section-light">
+    <div class="row section-mid">
         <div class="col-12 col-s-3">
-            <h1>Prestasi</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam illo molestias, nam expedita asperiores
-                nulla excepturi illum architecto veniam, minima nobis temporibus suscipit sint impedit harum ipsum
-                corporis omnis aut?</p>
+            <h2>Prestasi</h2>
+            <div class="row">
+                <div class="col-3 col-s-4 block-light">
+                    lorem
+                </div>
+                <div class="col-3 col-s-4 block-light">
+                    lorem
+                </div>
+                <div class="col-3 col-s-4 block-light">
+                    lorem
+                </div>
+            </div>
         </div>
     </div>
     <div class="row section-light">
