--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     Daftar di 8 pilihan program keahlian dengan kurikulum nasional.
                     Dapatkan kesempatan untuk mengikuti program keahlian yang sesuai dengan karakteristikmu.
                 </p>
-                <button class="button">Lihat Informasi PPDB</button>
+                <button class="button">Lihat Informasi PPDB <i class="fa-solid fa-circle-arrow-right"></i></button>
             </div>
         </div>
     </div>
@@ -117,7 +117,7 @@
                 <li><b>14-28 Februari 2022</b> : Pendaftaran SNMPTN</li>
                 <li><b>14 Februari - 17 Maret 2022</b> : Pembuatan Akun LTMPT</li>
                 <br>
-                <li><a href="#"><b>Kalender Akademik <i class="fa-solid fa-arrow-right"></b></i></a></li>
+                <li><a href="#"><b>Kalender Akademik <i class="fa-solid fa-circle-arrow-right"></i></b></a></li>
             </ul>
         </div>
         <div class="col-6 col-s-3">
