--- a/index.html
+++ b/index.html
@@ -140,12 +140,12 @@
         </div>
         <div class="col-s-3 block-dark">
             <h2 style="text-align:left">Visi</h2>
-            <p style="text-align:left">Terwujudnya sekolah dengan lulusan yang unggul dan berakhlaq mulia, berbudaya
+            <p>Terwujudnya sekolah dengan lulusan yang unggul dan berakhlaq mulia, berbudaya
                 kerja, berjiwa technopreuneurship serta berwawasan global sesuai tuntutan industri dan masyarakat.</p>
         </div>
         <div class="col-5 col-s-3 block-dark">
             <h2 style="text-align:left">Misi</h2>
-            <ol style="text-align:left; padding-left: 10px;">
+            <ul style="padding-left: 15px; list-style-type: disc;">
                 <li>Menghasilkan peserta didik yang unggul, beriman dan bertakwa kepada Tuhan Yang Maha Esa, berakhlak
                     mulia, berkebinekaan, mandiri, bergotong royong, bernalar kritis, kreatif. </li>
                 <li>Mewujudkan lingkungan yang berbudaya kerja.</li>
@@ -157,7 +157,7 @@
                 </li>
                 <li>Meningkatkan pelayanan pendidikan dan pengelolaan sekolah melalui optimalisasi penjaminan mutu
                     pendidikan.</li>
-            </ol>
+            </ul>
         </div>
     </div>
     <div class="row section-mid">
