--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
             </div>
         </div>
     </div>
-    <div class="row section-mid">
+    <div class="row section-mid" 
+    style="background: url(../img/abstract-mesh-vector-background-futuristic-technology-style-card-lines-point-planes-3d-space_22987440-01.png) no-repeat bottom left; background-size: cover;">
         <div class="col-12 col-s-3">
             <h2>Selamat datang di SMK Sains Pertiwi</h2>
             <p>SMK unggulan dengan Program Pendidikan Kejuruan yang menghasilkan lulusan bersertifikat internasional.
