--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </header>
     </div>
     <div class="row hero">
-        <div class="col-12 col-s-3">
+        <div>
             <div>
                 <h2>Penerimaan Siswa Baru Tahun Ajaran 2022/2023 segera dibuka.</h2>
                 <p>
@@ -99,16 +99,15 @@
             </div>
         </div>
     </div>
-    <div class="row section-mid" 
-    style="background: url(../img/abstract-mesh-vector-background-futuristic-technology-style-card-lines-point-planes-3d-space_22987440-01.png) no-repeat bottom left; background-size: cover;">
-        <div class="col-12 col-s-3">
+    <div class="row section-mid" style="background: url(../img/abstract-mesh-vector-background-futuristic-technology-style-card-lines-point-planes-3d-space_22987440-01.png) no-repeat bottom left; background-size: cover;">
+        <div>
             <h2>Selamat datang di SMK Sains Pertiwi</h2>
             <p>SMK unggulan dengan Program Pendidikan Kejuruan yang menghasilkan lulusan bersertifikat internasional.
             </p>
         </div>
     </div>
     <div class="row section-light">
-        <div class="col-6 col-s-3">
+        <div>
             <h2 style="text-align:left"><i class="fa-solid fa-calendar-days"></i> Kegiatan</h2>
             <ul style="text-align:left">
                 <li><b>1 Januari 2022</b> : Libur Umum (Tahun Baru Masehi 2022)</li>
@@ -121,7 +120,7 @@
                 <li><a href="#"><b>Kalender Akademik <i class="fa-solid fa-circle-arrow-right"></i></b></a></li>
             </ul>
         </div>
-        <div class="col-6 col-s-3">
+        <div>
             <h2 style="text-align:left"><i class="fa-solid fa-newspaper"></i> Berita</h2>
             <ul style="text-align:left; list-style-type: circle; padding-left: 10px;">
                 <li><a href="#">Ayo Dukung Siswa Kita di Program Microsoft Young Developer</a></li>
@@ -134,17 +133,17 @@
         </div>
     </div>
     <div class="row row-bottom section-light">
-        <div class="row-bottom col-3 col-s-3">
+        <div style="align-self: flex-end;">
             <div class="div-wrapper">
                 <img src="img/happy-braces-asian-student-girl-school-uniform-arm-crossed-isolated-pastel-background.png"/>
             </div>
         </div>
-        <div class="col-s-3 block-dark">
+        <div class="block-dark" style="flex-basis: 25%;">
             <h2 style="text-align:left">Visi</h2>
             <p>Terwujudnya sekolah dengan lulusan yang unggul dan berakhlaq mulia, berbudaya
                 kerja, berjiwa technopreuneurship serta berwawasan global sesuai tuntutan industri dan masyarakat.</p>
         </div>
-        <div class="col-5 col-s-3 block-dark">
+        <div class="block-dark" style="flex-basis: 30%">
             <h2 style="text-align:left">Misi</h2>
             <ul style="padding-left: 15px; list-style-type: disc;">
                 <li>Menghasilkan peserta didik yang unggul, beriman dan bertakwa kepada Tuhan Yang Maha Esa, berakhlak
@@ -162,23 +161,23 @@
         </div>
     </div>
     <div class="row section-mid">
-        <div class="col-12 col-s-3">
+        <div>
             <h2>Prestasi</h2>
             <div class="row">
-                <div class="col-3 col-s-4 block-light">
+                <div class="block-light">
                     lorem
                 </div>
-                <div class="col-3 col-s-4 block-light">
+                <div class="block-light">
                     lorem
                 </div>
-                <div class="col-3 col-s-4 block-light">
+                <div class="block-light">
                     lorem
                 </div>
             </div>
         </div>
     </div>
     <div class="row section-light">
-        <div class="col-12 col-s-3">
+        <div>
             <h1>Tenaga Pendidik</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam illo molestias, nam expedita asperiores
                 nulla excepturi illum architecto veniam, minima nobis temporibus suscipit sint impedit harum ipsum
@@ -186,7 +185,7 @@
         </div>
     </div>
     <div class="row section-dark">
-        <div class="col-12 col-s-3">
+        <div>
             <h1>Jumlah Siswa</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam illo molestias, nam expedita asperiores
                 nulla excepturi illum architecto veniam, minima nobis temporibus suscipit sint impedit harum ipsum
@@ -194,7 +193,7 @@
         </div>
     </div>
     <div class="row section-light">
-        <div class="col-12 col-s-3">
+        <div>
             <h1>Mitra SMK Sains Pertiwi</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam illo molestias, nam expedita asperiores
                 nulla excepturi illum architecto veniam, minima nobis temporibus suscipit sint impedit harum ipsum
@@ -202,7 +201,7 @@
         </div>
     </div>
     <div class="row section-light">
-        <div class="col-12 col-s-3">
+        <div>
             <h1>Profil Alumni</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam illo molestias, nam expedita asperiores
                 nulla excepturi illum architecto veniam, minima nobis temporibus suscipit sint impedit harum ipsum
@@ -210,7 +209,7 @@
         </div>
     </div>
     <div class="row footer">
-        <div class="col-6 col-s-3">
+        <div>
             <img src="img/web-logo-white.png" alt="Logo SMK Sains Pertiwi" width="60px">
             <h1>SMK Sains Pertiwi</h1>
             <p>Jl. Raya Pertiwi No.1, Cawang, Kec. Kramat Jati,<br>Jakarta Timur, DKI Jakarta</p>
@@ -218,7 +217,7 @@
             <p>Email: <a href="mailto:inbox@smksainspertiwi.ac.id" class="footerlink">inbox@smksainspertiwi.ac.id</a>
             </p>
         </div>
-        <div class="col-3 col-s-3">
+        <div>
             <h2>Navigasi</h2>
             <ul>
                 <li><a href="#" class="footerlink">Home</a></li>
@@ -230,7 +229,7 @@
                 <li><a href="#" class="footerlink">Galeri</a></li>
             </ul>
         </div>
-        <div class="col-3 col-s-3">
+        <div>
             <h2>Social Media</h2>
             <ul>
                 <li><a href="#" class="footerlink"><i class="fa-brands fa-facebook"></i> SMK Sains Pertiwi</a></li>
