--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
     </div>
     <div class="row hero">
         <div>
-            <div>
+            <div style="max-width: 600px;">
                 <h2>Penerimaan Siswa Baru Tahun Ajaran 2022/2023 segera dibuka.</h2>
-                <p>
+                <p style="text-align: justify;">
                     Daftar di 8 pilihan program keahlian dengan kurikulum nasional.
                     Dapatkan kesempatan untuk mengikuti program keahlian yang sesuai dengan karakteristikmu.
                 </p>
@@ -99,7 +99,8 @@
             </div>
         </div>
     </div>
-    <div class="row section-mid" style="background: url(../img/abstract-mesh-vector-background-futuristic-technology-style-card-lines-point-planes-3d-space_22987440-01.png) no-repeat bottom left; background-size: cover;">
+    <div class="row section-mid"
+        style="background: url(../img/abstract-mesh-vector-background-futuristic-technology-style-card-lines-point-planes-3d-space_22987440-01.png) no-repeat bottom left; background-size: cover;">
         <div>
             <h2>Selamat datang di SMK Sains Pertiwi</h2>
             <p>SMK unggulan dengan Program Pendidikan Kejuruan yang menghasilkan lulusan bersertifikat internasional.
@@ -124,8 +125,10 @@
             <h2 style="text-align:left"><i class="fa-solid fa-newspaper"></i> Berita</h2>
             <ul style="text-align:left; list-style-type: circle; padding-left: 10px;">
                 <li><a href="#">Ayo Dukung Siswa Kita di Program Microsoft Young Developer</a></li>
-                <li><a href="#">Pameran Produk Kreatif Kewirausahaan dan Start Up Bisnis Siswa SMK Sains Pertiwi</a></li>
-                <li><a href="#">Guru SMK Sains Pertiwi Raih Terbaik 2 Guru Dedikasi dan Inovasi SMK tingkat Nasional</a></li>
+                <li><a href="#">Pameran Produk Kreatif Kewirausahaan dan Start Up Bisnis Siswa SMK Sains Pertiwi</a>
+                </li>
+                <li><a href="#">Guru SMK Sains Pertiwi Raih Terbaik 2 Guru Dedikasi dan Inovasi SMK tingkat Nasional</a>
+                </li>
                 <li><a href="#">Workshop Produk Kreatif Kewirausahaan menuju Sekolah Pencetak Wirausaha</a></li>
                 <li><a href="#">Kunjungan SMKN 1 Sorong Papua</a></li>
                 <li><a href="#">“CAREER DAY” SMK Sains Pertiwi</a></li>
@@ -134,17 +137,18 @@
     </div>
     <div class="row row-bottom section-light">
         <div style="align-self: flex-end;">
-            <div class="div-wrapper">
-                <img src="img/happy-braces-asian-student-girl-school-uniform-arm-crossed-isolated-pastel-background.png"/>
+            <div class="div-wrapper" style="margin-top: 100px;">
+                <img
+                    src="img/happy-braces-asian-student-girl-school-uniform-arm-crossed-isolated-pastel-background.png" />
             </div>
         </div>
-        <div class="block-dark" style="flex-basis: 25%;">
-            <h2 style="text-align:left">Visi</h2>
+        <div class="after_bottom block-dark" style="flex-basis: 25%;">
+            <h2>Visi</h2>
             <p>Terwujudnya sekolah dengan lulusan yang unggul dan berakhlaq mulia, berbudaya
                 kerja, berjiwa technopreuneurship serta berwawasan global sesuai tuntutan industri dan masyarakat.</p>
         </div>
-        <div class="block-dark" style="flex-basis: 30%">
-            <h2 style="text-align:left">Misi</h2>
+        <div class="block-dark" style="flex-basis: 50%">
+            <h2>Misi</h2>
             <ul style="padding-left: 15px; list-style-type: disc;">
                 <li>Menghasilkan peserta didik yang unggul, beriman dan bertakwa kepada Tuhan Yang Maha Esa, berakhlak
                     mulia, berkebinekaan, mandiri, bergotong royong, bernalar kritis, kreatif. </li>
@@ -160,28 +164,104 @@
             </ul>
         </div>
     </div>
-    <div class="row section-mid">
+    <div class="row section-mid inside-box">
         <div>
             <h2>Prestasi</h2>
-            <div class="row">
-                <div class="block-light">
-                    lorem
+            <p style="text-align: center;">Prestasi yang diraih oleh siswa SMK Sains Pertiwi di tingkat Nasional dan
+                Internasional dibawah bimbingan tenaga pendidik kami</p>
+            <div class="row inside-box" style="justify-content: center;">
+                <div class="block-light" style="flex-basis: 20%; align-self: stretch;">
+                    <img src="img/v3_0014707.png" alt="" width="150px"
+                        style="display: block; margin:auto; margin-bottom: 8px;">
+                    <h3 style="text-align: center;">Andreas Lukito</h3>
+                    <p style="text-align: center; margin-bottom: 0px;">Pemenang Lomba Kompetisi Teknologi Informasi dan
+                        Komunikasi (KTI) SMK Sains Pertiwi</p>
                 </div>
-                <div class="block-light">
-                    lorem
+                <div class="block-light" style="flex-basis: 20%; align-self: stretch;">
+                    <img src="img/v3_0129374.png" alt="" width="150px"
+                        style="display: block; margin:auto; margin-bottom: 8px">
+                    <h3 style="text-align: center;">Ismail Putra</h3>
+                    <p style="text-align: center; margin-bottom: 0px;">Macrohard Young Talent 2021</p>
                 </div>
-                <div class="block-light">
-                    lorem
+                <div class="block-light" style="flex-basis: 20%; align-self: stretch;">
+                    <img src="img/v3_0597222.png" alt="" width="150px"
+                        style="display: block; margin:auto; margin-bottom: 8px">
+                    <h3 style="text-align: center;">Susan Larasati</h3>
+                    <p style="text-align: center; margin-bottom: 0px;">Internasional Young Scriptwritter Award 2020</p>
+                </div>
+                <div class="block-light" style="flex-basis: 20%; align-self: stretch;">
+                    <img src="img/v3_0041224.png" alt="" width="150px"
+                        style="display: block; margin:auto; margin-bottom: 8px">
+                    <h3 style="text-align: center;">Kurnia Santoso Darmawan</h3>
+                    <p style="text-align: center; margin-bottom: 0px;">Pemenang OSN Matematika 2019</p>
+                </div>
+                <div class="block-light" style="flex-basis: 20%; align-self: stretch;">
+                    <img src="img/v3_0344756.png" alt="" width="150px"
+                        style="display: block; margin:auto; margin-bottom: 8px;">
+                    <h3 style="text-align: center;">Anwar Ibrahim</h3>
+                    <p style="text-align: center; margin-bottom: 0px;">Best Short Movie Kemendikbud Fest 2020</p>
+                </div>
+                <div class="block-light" style="flex-basis: 20%; align-self: stretch;">
+                    <img src="img/v3_0740148.png" alt="" width="150px"
+                        style="display: block; margin:auto; margin-bottom: 8px">
+                    <h3 style="text-align: center;">Adrian Silalahi</h3>
+                    <p style="text-align: center; margin-bottom: 0px;">Gold Medalist Swimming Competition 2021</p>
+                </div>
+                <div class="block-light" style="flex-basis: 20%; align-self: stretch;">
+                    <img src="img/v3_0895715.png" alt="" width="150px"
+                        style="display: block; margin:auto; margin-bottom: 8px">
+                    <h3 style="text-align: center;">Anne Marie</h3>
+                    <p style="text-align: center; margin-bottom: 0px;">Best Industrial Concept Design 2020</p>
+                </div>
+                <div class="block-light" style="flex-basis: 20%; align-self: stretch;">
+                    <img src="img/v3_0129374.png" alt="" width="150px"
+                        style="display: block; margin:auto; margin-bottom: 8px">
+                    <h3 style="text-align: center;">Ismail Putra</h3>
+                    <p style="text-align: center; margin-bottom: 0px;">2nd Winner Student Hackathon 2021</p>
                 </div>
             </div>
         </div>
     </div>
     <div class="row section-light">
         <div>
-            <h1>Tenaga Pendidik</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam illo molestias, nam expedita asperiores
-                nulla excepturi illum architecto veniam, minima nobis temporibus suscipit sint impedit harum ipsum
-                corporis omnis aut?</p>
+            <h2>Tenaga Pendidik</h2>
+            <p style="max-width: 800px; text-align: center; margin-left: auto; margin-right: auto;">Tenaga pedidik kami berkualitas dan berkompetensi nasional dan internasional.
+                Perekrutan melalui seleksi yang ketat. Semua itu sebagai persiapan
+                agar peserta didik kami yang masih usia remaja tidak terbawa arus, dan lebih mampu berpikir, bertindak,
+                serta menentukan keputusan yang tepat.</p>
+            <div class="row inside-box" style="justify-content: center;">
+                <div class="block-light" style="flex-basis: 15%; align-self: stretch;">
+                    <img src="img/v3_0774103.png" alt="" width="150px"
+                        style="display: block; margin:auto; margin-bottom: 8px;">
+                    <h3 style="text-align: center;">Dr. Stefie Rahmawati</h3>
+                    <p style="text-align: center; margin-bottom: 0px;">Kepala Sekolah</p>
+                </div>
+                <div class="block-light" style="flex-basis: 15%; align-self: stretch;">
+                    <img src="img/v3_0217531.png" alt="" width="150px"
+                        style="display: block; margin:auto; margin-bottom: 8px;">
+                    <h3 style="text-align: center;">Rahmawan Saputra, M.Pd</h3>
+                    <p style="text-align: center; margin-bottom: 0px;">Wakil Kepala Sekolah Bidang Akademik</p>
+                </div>
+                <div class="block-light" style="flex-basis: 15%; align-self: stretch;">
+                    <img src="img/v3_0230412.png" alt="" width="150px"
+                        style="display: block; margin:auto; margin-bottom: 8px;">
+                    <h3 style="text-align: center;">Andreas Himawan, M.Pd</h3>
+                    <p style="text-align: center; margin-bottom: 0px;">Wakil Kepala Sekolah Bidang Non-Akademik</p>
+                </div>
+                <div class="block-light" style="flex-basis: 15%; align-self: stretch;">
+                    <img src="img/v3_0998714.png" alt="" width="150px"
+                        style="display: block; margin:auto; margin-bottom: 8px;">
+                    <h3 style="text-align: center;">Karina Stephanie Putri, M.Pd</h3>
+                    <p style="text-align: center; margin-bottom: 0px;">Wakil Kepala Sekolah Bidang Kesiswaan</p>
+                </div>
+                <div class="block-light" style="flex-basis: 15%; align-self: stretch;">
+                    <img src="img/v3_0719025.png" alt="" width="150px"
+                        style="display: block; margin:auto; margin-bottom: 8px;">
+                    <h3 style="text-align: center;">Nisa Maulia, M.Si</h3>
+                    <p style="text-align: center; margin-bottom: 0px;">Bimbingan Konseling / Penasihat Akademik</p>
+                </div>
+                <a href="#"><b>Lihat semua tenaga pendidik kami <i class="fa-solid fa-circle-arrow-right"></i></b></a>
+            </div>
         </div>
     </div>
     <div class="row section-dark">
