--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
     </div>
     <div class="row hero">
         <div>
-            <div style="max-width: 600px;">
+            <div class="under-header">
                 <h2>Penerimaan Siswa Baru Tahun Ajaran 2022/2023 segera dibuka.</h2>
-                <p style="text-align: justify;">
+                <p>
                     Daftar di 8 pilihan program keahlian dengan kurikulum nasional.
                     Dapatkan kesempatan untuk mengikuti program keahlian yang sesuai dengan karakteristikmu.
                 </p>
@@ -99,17 +99,16 @@
             </div>
         </div>
     </div>
-    <div class="row section-mid"
-        style="background: url(../img/abstract-mesh-vector-background-futuristic-technology-style-card-lines-point-planes-3d-space_22987440-01.png) no-repeat bottom left; background-size: cover;">
+    <div class="row section-mid ornament-up">
         <div>
             <h2>Selamat datang di SMK Sains Pertiwi</h2>
             <p>SMK unggulan dengan Program Pendidikan Kejuruan yang menghasilkan lulusan bersertifikat internasional.
             </p>
         </div>
     </div>
-    <div class="row section-light">
+    <div class="row row-spaced section-light">
         <div>
-            <h2 style="text-align:left"><i class="fa-solid fa-calendar-days"></i> Kegiatan</h2>
+            <h2 class="underlined head2" style="text-align:left">Kegiatan</h2>
             <ul style="text-align:left">
                 <li><b>1 Januari 2022</b> : Libur Umum (Tahun Baru Masehi 2022)</li>
                 <li><b>3 Januari 2022</b> : Hari Pertama Sekolah (HP) dan Awal Semester Genap</li>
@@ -122,9 +121,10 @@
             </ul>
         </div>
         <div>
-            <h2 style="text-align:left"><i class="fa-solid fa-newspaper"></i> Berita</h2>
+            <h2 class="underlined head2" style="text-align:left">Berita</h2>
             <ul style="text-align:left; list-style-type: circle; padding-left: 10px;">
                 <li><a href="#">Ayo Dukung Siswa Kita di Program Microsoft Young Developer</a></li>
+                <li><a href="#">Kunjungan SMKN 2 Jambi</a></li>
                 <li><a href="#">Pameran Produk Kreatif Kewirausahaan dan Start Up Bisnis Siswa SMK Sains Pertiwi</a>
                 </li>
                 <li><a href="#">Guru SMK Sains Pertiwi Raih Terbaik 2 Guru Dedikasi dan Inovasi SMK tingkat Nasional</a>
@@ -132,24 +132,27 @@
                 <li><a href="#">Workshop Produk Kreatif Kewirausahaan menuju Sekolah Pencetak Wirausaha</a></li>
                 <li><a href="#">Kunjungan SMKN 1 Sorong Papua</a></li>
                 <li><a href="#">“CAREER DAY” SMK Sains Pertiwi</a></li>
+                <br>
+                <li style="list-style-type:none;"><a href="#"><b>Lihat semua berita SMK Sains Pertiwi <i class="fa-solid fa-circle-arrow-right"></i></b></a></li>
             </ul>
         </div>
     </div>
-    <div class="row row-bottom section-light">
-        <div style="align-self: flex-end;">
-            <div class="div-wrapper" style="margin-top: 100px;">
+    <div class="row row-visi section-light">
+        <div class="img-bottom">
+            <div class="div-wrapper">
                 <img
                     src="img/happy-braces-asian-student-girl-school-uniform-arm-crossed-isolated-pastel-background.png" />
             </div>
         </div>
-        <div class="after_bottom block-dark" style="flex-basis: 25%;">
-            <h2>Visi</h2>
-            <p>Terwujudnya sekolah dengan lulusan yang unggul dan berakhlaq mulia, berbudaya
+        <div class="after-bottom block-dark" style="flex-basis: 25%;">
+            <h2 class="underlined left-text">Visi</h2>
+            <p style="text-align: justify;">Terwujudnya sekolah dengan lulusan yang unggul dan berakhlaq mulia,
+                berbudaya
                 kerja, berjiwa technopreuneurship serta berwawasan global sesuai tuntutan industri dan masyarakat.</p>
         </div>
-        <div class="block-dark" style="flex-basis: 50%">
-            <h2>Misi</h2>
-            <ul style="padding-left: 15px; list-style-type: disc;">
+        <div class="after-bottom block-dark" style="flex-basis: 35%">
+            <h2 class="underlined left-text">Misi</h2>
+            <ul style="padding-left: 15px; list-style-type: disc; text-align: justify;">
                 <li>Menghasilkan peserta didik yang unggul, beriman dan bertakwa kepada Tuhan Yang Maha Esa, berakhlak
                     mulia, berkebinekaan, mandiri, bergotong royong, bernalar kritis, kreatif. </li>
                 <li>Mewujudkan lingkungan yang berbudaya kerja.</li>
@@ -164,59 +167,59 @@
             </ul>
         </div>
     </div>
-    <div class="row section-mid inside-box">
+    <div class="row section-mid">
         <div>
-            <h2>Prestasi</h2>
-            <p style="text-align: center;">Prestasi yang diraih oleh siswa SMK Sains Pertiwi di tingkat Nasional dan
-                Internasional dibawah bimbingan tenaga pendidik kami</p>
-            <div class="row inside-box" style="justify-content: center;">
-                <div class="block-light" style="flex-basis: 20%; align-self: stretch;">
+            <h2 class="underlined">Prestasi</h2>
+            <p class="under-header">Prestasi yang diraih oleh siswa SMK Sains Pertiwi di tingkat Nasional dan
+                Internasional dibawah bimbingan tenaga pendidik SMK Sains Pertiwi</p>
+            <div class="row inside-box">
+                <div class="block-light" style="flex-basis: 20%;">
                     <img src="img/v3_0014707.png" alt="" width="150px"
                         style="display: block; margin:auto; margin-bottom: 8px;">
-                    <h3 style="text-align: center;">Andreas Lukito</h3>
+                    <h4 style="text-align: center;">Andreas Lukito</h4>
                     <p style="text-align: center; margin-bottom: 0px;">Pemenang Lomba Kompetisi Teknologi Informasi dan
-                        Komunikasi (KTI) SMK Sains Pertiwi</p>
+                        Komunikasi (KTI)</p>
                 </div>
-                <div class="block-light" style="flex-basis: 20%; align-self: stretch;">
+                <div class="block-light" style="flex-basis: 20%;">
                     <img src="img/v3_0129374.png" alt="" width="150px"
                         style="display: block; margin:auto; margin-bottom: 8px">
-                    <h3 style="text-align: center;">Ismail Putra</h3>
+                    <h4 style="text-align: center;">Ismail Putra</h4>
                     <p style="text-align: center; margin-bottom: 0px;">Macrohard Young Talent 2021</p>
                 </div>
-                <div class="block-light" style="flex-basis: 20%; align-self: stretch;">
+                <div class="block-light" style="flex-basis: 20%;">
                     <img src="img/v3_0597222.png" alt="" width="150px"
                         style="display: block; margin:auto; margin-bottom: 8px">
-                    <h3 style="text-align: center;">Susan Larasati</h3>
+                    <h4 style="text-align: center;">Susan Larasati</h4>
                     <p style="text-align: center; margin-bottom: 0px;">Internasional Young Scriptwritter Award 2020</p>
                 </div>
-                <div class="block-light" style="flex-basis: 20%; align-self: stretch;">
+                <div class="block-light" style="flex-basis: 20%;">
                     <img src="img/v3_0041224.png" alt="" width="150px"
                         style="display: block; margin:auto; margin-bottom: 8px">
-                    <h3 style="text-align: center;">Kurnia Santoso Darmawan</h3>
+                    <h4 style="text-align: center;">Kurnia Santoso Darmawan</h4>
                     <p style="text-align: center; margin-bottom: 0px;">Pemenang OSN Matematika 2019</p>
                 </div>
-                <div class="block-light" style="flex-basis: 20%; align-self: stretch;">
+                <div class="block-light" style="flex-basis: 20%;">
                     <img src="img/v3_0344756.png" alt="" width="150px"
                         style="display: block; margin:auto; margin-bottom: 8px;">
-                    <h3 style="text-align: center;">Anwar Ibrahim</h3>
+                    <h4 style="text-align: center;">Anwar Ibrahim</h4>
                     <p style="text-align: center; margin-bottom: 0px;">Best Short Movie Kemendikbud Fest 2020</p>
                 </div>
-                <div class="block-light" style="flex-basis: 20%; align-self: stretch;">
+                <div class="block-light" style="flex-basis: 20%;">
                     <img src="img/v3_0740148.png" alt="" width="150px"
                         style="display: block; margin:auto; margin-bottom: 8px">
-                    <h3 style="text-align: center;">Adrian Silalahi</h3>
+                    <h4 style="text-align: center;">Adrian Silalahi</h4>
                     <p style="text-align: center; margin-bottom: 0px;">Gold Medalist Swimming Competition 2021</p>
                 </div>
-                <div class="block-light" style="flex-basis: 20%; align-self: stretch;">
+                <div class="block-light" style="flex-basis: 20%;">
                     <img src="img/v3_0895715.png" alt="" width="150px"
                         style="display: block; margin:auto; margin-bottom: 8px">
-                    <h3 style="text-align: center;">Anne Marie</h3>
+                    <h4 style="text-align: center;">Anne Marie</h4>
                     <p style="text-align: center; margin-bottom: 0px;">Best Industrial Concept Design 2020</p>
                 </div>
-                <div class="block-light" style="flex-basis: 20%; align-self: stretch;">
+                <div class="block-light" style="flex-basis: 20%;">
                     <img src="img/v3_0129374.png" alt="" width="150px"
                         style="display: block; margin:auto; margin-bottom: 8px">
-                    <h3 style="text-align: center;">Ismail Putra</h3>
+                    <h4 style="text-align: center;">Ismail Putra</h4>
                     <p style="text-align: center; margin-bottom: 0px;">2nd Winner Student Hackathon 2021</p>
                 </div>
             </div>
@@ -224,68 +227,96 @@
     </div>
     <div class="row section-light">
         <div>
-            <h2>Tenaga Pendidik</h2>
-            <p style="max-width: 800px; text-align: center; margin-left: auto; margin-right: auto;">Tenaga pedidik kami berkualitas dan berkompetensi nasional dan internasional.
+            <h2 class="underlined head2">Tenaga Pendidik</h2>
+            <p class="under-header">Tenaga pedidik SMK Sains Pertiwi
+                berkualitas dan berkompetensi nasional dan internasional.
                 Perekrutan melalui seleksi yang ketat. Semua itu sebagai persiapan
-                agar peserta didik kami yang masih usia remaja tidak terbawa arus, dan lebih mampu berpikir, bertindak,
-                serta menentukan keputusan yang tepat.</p>
-            <div class="row inside-box" style="justify-content: center;">
-                <div class="block-light" style="flex-basis: 15%; align-self: stretch;">
+                agar peserta didik SMK Sains Pertiwi yang masih usia remaja tidak terbawa arus, dan lebih mampu berpikir, bertindak,
+                serta menentukan keputusan yang tepat</p>
+            <div class="row">
+                <div class="block-light" style="flex-basis: 15%;">
                     <img src="img/v3_0774103.png" alt="" width="150px"
                         style="display: block; margin:auto; margin-bottom: 8px;">
-                    <h3 style="text-align: center;">Dr. Stefie Rahmawati</h3>
+                    <h4 style="text-align: center;">Dr. Stefie Rahmawati</h4>
                     <p style="text-align: center; margin-bottom: 0px;">Kepala Sekolah</p>
                 </div>
-                <div class="block-light" style="flex-basis: 15%; align-self: stretch;">
+                <div class="block-light" style="flex-basis: 15%;">
                     <img src="img/v3_0217531.png" alt="" width="150px"
                         style="display: block; margin:auto; margin-bottom: 8px;">
-                    <h3 style="text-align: center;">Rahmawan Saputra, M.Pd</h3>
+                    <h4 style="text-align: center;">Putra Rahmawan, M.Pd</h4>
                     <p style="text-align: center; margin-bottom: 0px;">Wakil Kepala Sekolah Bidang Akademik</p>
                 </div>
-                <div class="block-light" style="flex-basis: 15%; align-self: stretch;">
+                <div class="block-light" style="flex-basis: 15%;">
                     <img src="img/v3_0230412.png" alt="" width="150px"
                         style="display: block; margin:auto; margin-bottom: 8px;">
-                    <h3 style="text-align: center;">Andreas Himawan, M.Pd</h3>
+                    <h4 style="text-align: center;">Andreas Himawan, M.Pd</h4>
                     <p style="text-align: center; margin-bottom: 0px;">Wakil Kepala Sekolah Bidang Non-Akademik</p>
                 </div>
-                <div class="block-light" style="flex-basis: 15%; align-self: stretch;">
+                <div class="block-light" style="flex-basis: 15%;">
                     <img src="img/v3_0998714.png" alt="" width="150px"
                         style="display: block; margin:auto; margin-bottom: 8px;">
-                    <h3 style="text-align: center;">Karina Stephanie Putri, M.Pd</h3>
+                    <h4 style="text-align: center;">Karina Stephanie, M.Pd</h4>
                     <p style="text-align: center; margin-bottom: 0px;">Wakil Kepala Sekolah Bidang Kesiswaan</p>
                 </div>
-                <div class="block-light" style="flex-basis: 15%; align-self: stretch;">
+                <div class="block-light" style="flex-basis: 15%;">
                     <img src="img/v3_0719025.png" alt="" width="150px"
                         style="display: block; margin:auto; margin-bottom: 8px;">
-                    <h3 style="text-align: center;">Nisa Maulia, M.Si</h3>
+                    <h4 style="text-align: center;">Nisa Maulia, M.Si</h4>
                     <p style="text-align: center; margin-bottom: 0px;">Bimbingan Konseling / Penasihat Akademik</p>
                 </div>
-                <a href="#"><b>Lihat semua tenaga pendidik kami <i class="fa-solid fa-circle-arrow-right"></i></b></a>
+            </div>
+            <a href="#"><b>Lihat semua tenaga pendidik <i class="fa-solid fa-circle-arrow-right"></i></b></a>
+        </div>
+    </div>
+    <div class="row section-light">
+        <div>
+            <h2 class="underlined head2">Jumlah Siswa</h2>
+            <p class="under-header">Dengan 8 program
+                keahlian berbasis kurikulum nasional, SMK Sains Pertiwi siap menciptakan lulusan dengan ketrampilan
+                berstandar industri</p>
+            <div class="row block-dark" style="max-width: 1000px;">
+                <div style="flex-basis: 20%;">
+                    <span class="big-font">1.143</span>
+                    <h4>Peserta Didik Aktif</h4>
+                </div>
+                <div style="flex-basis: 20%;">
+                    <span class="big-font">8</span>
+                    <h4>Program Keahlian</h4>
+                </div>
+                <div style="flex-basis: 20%;">
+                    <span class="big-font">16</span>
+                    <h4>Kelas</h4>
+                </div>
             </div>
         </div>
     </div>
-    <div class="row section-dark">
+    <div class="row section-light" style="padding-bottom: 0px;">
         <div>
-            <h1>Jumlah Siswa</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam illo molestias, nam expedita asperiores
-                nulla excepturi illum architecto veniam, minima nobis temporibus suscipit sint impedit harum ipsum
-                corporis omnis aut?</p>
+            <h2 class="underlined head2">Mitra SMK Sains Pertiwi</h2>
+            <p class="under-header">Lulusan SMK Sains Pertiwi berpeluang untuk bekerja pada perusahaan yang menjadi mitra SMK Sains Pertiwi</p>
         </div>
+    </div>
+    <div class="row section-light" style="padding-top: 0px;">
+        <div style="flex-basis: 10%;"><img src="img/grayscale/1.png" alt="" width="100px"></div>
+        <div style="flex-basis: 10%;"><img src="img/grayscale/2.png" alt="" width="100px"></div>
+        <div style="flex-basis: 10%;"><img src="img/grayscale/3.png" alt="" width="100px"></div>
+        <div style="flex-basis: 10%;"><img src="img/grayscale/4.png" alt="" width="100px"></div>
+        <div style="flex-basis: 10%;"><img src="img/grayscale/5.png" alt="" width="100px"></div>
+        <div style="flex-basis: 10%;"><img src="img/grayscale/6.png" alt="" width="100px"></div>
+        <div style="flex-basis: 10%;"><img src="img/grayscale/7.png" alt="" width="100px"></div>
+        <div style="flex-basis: 10%;"><img src="img/grayscale/8.png" alt="" width="100px"></div>
+        <div style="flex-basis: 10%;"><img src="img/grayscale/9.png" alt="" width="100px"></div>
+        <div style="flex-basis: 10%;"><img src="img/grayscale/10.png" alt="" width="100px"></div>
+        <div style="flex-basis: 10%;"><img src="img/grayscale/11.png" alt="" width="100px"></div>
+        <div style="flex-basis: 10%;"><img src="img/grayscale/12.png" alt="" width="100px"></div>
+        <div style="flex-basis: 10%;"><img src="img/grayscale/13.png" alt="" width="100px"></div>
+        <div style="flex-basis: 10%;"><img src="img/grayscale/auto-speed.png" alt="" width="100px"></div>
+        <div style="flex-basis: 10%;"><img src="img/grayscale/beauty-box.png" alt="" width="100px"></div>
+        <div style="flex-basis: 10%;"><img src="img/grayscale/crofts-accountants.png" alt="" width="100px"></div>
     </div>
     <div class="row section-light">
         <div>
-            <h1>Mitra SMK Sains Pertiwi</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam illo molestias, nam expedita asperiores
-                nulla excepturi illum architecto veniam, minima nobis temporibus suscipit sint impedit harum ipsum
-                corporis omnis aut?</p>
-        </div>
-    </div>
-    <div class="row section-light">
-        <div>
-            <h1>Profil Alumni</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam illo molestias, nam expedita asperiores
-                nulla excepturi illum architecto veniam, minima nobis temporibus suscipit sint impedit harum ipsum
-                corporis omnis aut?</p>
+            <h2 class="underlined head2">Profil Alumni</h2>
         </div>
     </div>
     <div class="row footer">
